reviews deels verwerkt P1

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
       </ul>
 
       <!-- navigatie rechts -->
-      <a href="">inloggen<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-          <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" stroke-linejoin="round" />
-        </svg></a>
-      <button>word lid<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-          <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" stroke-linejoin="round" />
-        </svg></button>
+      <a href="">inloggen
+        <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+      </a>
+      <button>word lid
+        <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+      </button>
     </nav>
 
     <!-- terug naar home link -->
@@ -56,12 +54,9 @@
         <p class="label">DDD</p>
         <p class="data">WO 09 NOV / AMSTERDAM</p>
         <h3>DUTCH DIGITAL DAY: THE 10TH EDITION</h3>
-        <a href="">DETAILS <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-            <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-              stroke-linejoin="round" />
-          </svg></a>
+        <a href="">DETAILS 
+          <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+        </a>
       </article>
 
       <article>
@@ -69,12 +64,9 @@
         <p class="label">DDD</p>
         <p class="data">DO 10 NOV / UTRECHT</p>
         <h3>LEDEN BIJEENKOMST</h3>
-        <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-            <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-              stroke-linejoin="round" />
-          </svg></a>
+        <a href="">DETAILS
+          <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+        </a>
       </article>
 
       <article>
@@ -82,24 +74,19 @@
         <p class="label">VERGADERING</p>
         <p class="data">MA 31 DEC / AMSTERDAM</p>
         <h3>Creative Jam Dutch Design Week</h3>
-        <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-            <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-              stroke-linejoin="round" />
-          </svg></a>
+        <a href="">DETAILS
+          <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+        </a>
       </article>
     </section>
 
     <section>
       <!-- SEARCH NOG AANPASSEN!!! -->
-      <search>
         <form action="./search">
           <label for="event">zoek een event...</label>
           <input type="search" id="event" name="search">
           <button type="submit">zoek</button>
         </form>
-      </search>
       <button>THEMA</button>
       <button>LOCATIE</button>
 
@@ -109,89 +96,65 @@
           <p class="label">UX</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <p class="data">01 NOV / EINDHOVEN</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>DDA Ledenbijeenkomst</h4>
           <p class="data">09 NOV / AMSTERDAM</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">UX</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <p class="data">01 NOV / EINDHOVEN</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS 
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>DDA Ledenbijeenkomst</h4>
           <p class="data">09 NOV / AMSTERDAM</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS 
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">UX</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <p class="data">01 NOV / EINDHOVEN</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>DDA Ledenbijeenkomst</h4>
           <p class="data">09 NOV / AMSTERDAM</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">UX</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <p class="data">01 NOV / EINDHOVEN</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>DDA Ledenbijeenkomst</h4>
           <p class="data">09 NOV / AMSTERDAM</p>
-          <a href="">DETAILS<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">DETAILS
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
       </ul>
 
@@ -215,36 +178,27 @@
           <h4>Adviseer de overheid bij een pandemie</h4>
           <p class="data">03 DEC / UTRECHT</p>
           <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-          <a href="">BUTTON<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">BUTTON
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <p class="data">01 NOV / AMSTERDAM</p>
           <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-          <a href="">BUTTON<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">BUTTON
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+          </a>
         </li>
         <li>
           <p class="label">UX</p>
           <h4>Adviseer de overheid bij een pandemie</h4>
           <p class="data">03 DEC / UTRECHT</p>
           <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-          <a href="">BUTTON<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-              <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023"
-                stroke-linejoin="round" />
-            </svg></a>
+          <a href="">BUTTON
+            <img src="assets/arrow-right.svg" alt="pijltje naar rechts">          
+          </a>
         </li>
       </ul>
 
@@ -265,18 +219,11 @@
 
     <!-- email-adres balk? -->
 
-    <a href="">AANMELDEN<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-        <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" stroke-linejoin="round" />
-      </svg></a>
+    <a href="">AANMELDEN <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
 
     <!-- deel 2 footer -->
     <h3>Wij bedanken onze trouwe partners</h3>
-    <a href="">WORD PARTNER<svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-        <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" stroke-linejoin="round" />
-      </svg></a>
+    <a href="">WORD PARTNER <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
 
     <!-- reclame foto's -->
     <div>
@@ -293,10 +240,7 @@
 
     <!-- deel 4 footer links -->
     <img src="../the-client-website/assets/logo.svg" alt="logo">
-    <a href="">inloggen<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M8 3L13.0001 8.0001L8 13.0002" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" />
-        <path d="M3 8L13 8" stroke="#222226" stroke-width="1.5" stroke-miterlimit="4.62023" stroke-linejoin="round" />
-      </svg></a>
+    <a href="">inloggen <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
 
     <!-- deel 4 footer midden -->
     <nav class="footer">
@@ -315,8 +259,8 @@
     <p>Dutch Digital Agencies
       Overhoeksplein 1
       1031 KS Amsterdam</p>
-    <a href="(0)85 4010391">(0)85 4010391</a>
-    <a href="info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
+    <a href="tel:(0)85 4010391">(0)85 4010391</a>
+    <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
 
     <!-- deel 5 bodem footer -->
     <a href="https://www.instagram.com/dutchdigitalagencies/">Instagram</a>
