alt aangepast issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <!-- navigatie logo -->
-      <img src="../the-client-website/assets/logo.svg" alt="logo">
+      <img src="../the-client-website/assets/logo.svg" alt="terug naar homepagina">
 
       <!-- navigatie links -->
       <ul class="nav">
