section aangepast naar div

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <main>
-    <section>
+    <div>
       <!-- drie articles met plaatjes -->
       <article>
         <img src="../the-client-website/assets/dutch-digital-day.png" alt="dutch digital day">
@@ -78,9 +78,9 @@
           <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
         </a>
       </article>
-    </section>
+    </div>
 
-    <section>
+    <div>
       <!-- SEARCH NOG AANPASSEN!!! -->
         <form action="./search">
           <label for="event">zoek een event...</label>
@@ -166,10 +166,10 @@
             fill="#222226" />
         </svg>
       </button>
-    </section>
+    </div>
 
 
-    <section>
+    <div>
       <!-- plaatsgevonden events -->
       <h3>PLAATSGEVONDEN EVENTS:</h3>
       <ul>
@@ -210,7 +210,7 @@
             fill="#222226" />
         </svg>
       </button>
-    </section>
+    </div>
   </main>
 
   <footer>
