--- a/index.html
+++ b/index.html
@@ -198,13 +198,7 @@
 
     <!-- uitklappen meer events met JS -->
     <section class="extra">
-      <button>meer events laden<svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M6.00008 11.3337C4.51119 11.3337 3.25008 10.817 2.21675 9.78366C1.18341 8.75033 0.666748 7.48921 0.666748 6.00033C0.666748 4.51144 1.18341 3.25033 2.21675 2.21699C3.25008 1.18366 4.51119 0.666992 6.00008 0.666992C6.76675 0.666992 7.50008 0.825326 8.20008 1.14199C8.90008 1.45866 9.50008 1.91144 10.0001 2.50033V0.666992H11.3334V5.33366H6.66675V4.00033H9.46675C9.11119 3.3781 8.62508 2.88921 8.00841 2.53366C7.39175 2.1781 6.7223 2.00033 6.00008 2.00033C4.88897 2.00033 3.94453 2.38921 3.16675 3.16699C2.38897 3.94477 2.00008 4.88921 2.00008 6.00033C2.00008 7.11144 2.38897 8.05588 3.16675 8.83366C3.94453 9.61144 4.88897 10.0003 6.00008 10.0003C6.85564 10.0003 7.62786 9.75588 8.31675 9.26699C9.00564 8.7781 9.48897 8.13366 9.76675 7.33366H11.1667C10.8556 8.51144 10.2223 9.47255 9.26675 10.217C8.31119 10.9614 7.2223 11.3337 6.00008 11.3337Z"
-            fill="#222226" />
-        </svg>
-      </button>
+      <p>meer events aan het laden...</p>
     </section>
 
 
@@ -239,24 +233,18 @@
         <li>
           <p class="label">UX</p>
           <h4>Adviseer de overheid bij een pandemie</h4>
-            <p class="data">03 dec / Utrecht</p>
-            <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-            <a class="blauwe-link" href="">BUTTON
-              <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
-            </a>
+          <p class="data">03 dec / Utrecht</p>
+          <p class="verleden">HEEFT PLAATSGEVONDEN</p>
+          <a class="blauwe-link" href="">BUTTON
+            <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
+          </a>
         </li>
       </ul>
-</section>
+    </section>
 
-      <!-- uitklappen meer events met JS -->
-    <section class="extra">  
-      <button>meer events laden<svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M6.00008 11.3337C4.51119 11.3337 3.25008 10.817 2.21675 9.78366C1.18341 8.75033 0.666748 7.48921 0.666748 6.00033C0.666748 4.51144 1.18341 3.25033 2.21675 2.21699C3.25008 1.18366 4.51119 0.666992 6.00008 0.666992C6.76675 0.666992 7.50008 0.825326 8.20008 1.14199C8.90008 1.45866 9.50008 1.91144 10.0001 2.50033V0.666992H11.3334V5.33366H6.66675V4.00033H9.46675C9.11119 3.3781 8.62508 2.88921 8.00841 2.53366C7.39175 2.1781 6.7223 2.00033 6.00008 2.00033C4.88897 2.00033 3.94453 2.38921 3.16675 3.16699C2.38897 3.94477 2.00008 4.88921 2.00008 6.00033C2.00008 7.11144 2.38897 8.05588 3.16675 8.83366C3.94453 9.61144 4.88897 10.0003 6.00008 10.0003C6.85564 10.0003 7.62786 9.75588 8.31675 9.26699C9.00564 8.7781 9.48897 8.13366 9.76675 7.33366H11.1667C10.8556 8.51144 10.2223 9.47255 9.26675 10.217C8.31119 10.9614 7.2223 11.3337 6.00008 11.3337Z"
-            fill="#" />
-        </svg>
-      </button>
+    <!-- uitklappen meer events met JS -->
+    <section class="extra">
+      <p>meer events aan het laden...</p>
     </section>
 
     <section>
@@ -287,11 +275,9 @@
   </main>
 
   <footer>
-
-
     <!-- deel 4 footer links -->
-    <div>
-      <img src="../the-client-website/assets/logo.svg" alt="logo">
+    <div class="left">
+      <img id="logo" src="../the-client-website/assets/logo.svg" alt="logo">
       <a href="">inloggen <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
     </div>
 
@@ -309,22 +295,32 @@
     </nav>
 
     <!-- deel 4 footer rechts -->
-    <div>
-      <p>Dutch Digital Agencies
-        Overhoeksplein 1
-        1031 KS Amsterdam</p>
-      <a href="tel:(0)85 4010391">(0)85 4010391</a>
-      <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
+    <div class="right">
+      <p><b>Dutch Digital Agencies</b>
+        <br>Capital C
+        <br>Weesperplein 4B
+        <br>1018 XA Amsterdam
+      </p>
+      <div class="contact">
+        <br><a href="tel:(0)85 4010391">(0)85 4010391</a>
+        <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
+      </div>
     </div>
+  </footer>
 
-    <div></div>
+  <section class="bottom">
     <!-- deel 5 bodem footer -->
+    <div class="socials">
     <a href="https://www.instagram.com/dutchdigitalagencies/">Instagram</a>
     <a href="https://www.facebook.com/DutchDigitalAgencies/">Facebook</a>
     <a href="https://nl.linkedin.com/company/dutch-digital-agencies">LinkedIn</a>
-    <p class="footer">Copyright © 2023 Dutch Digital Agencies</p>
+  </div>
 
-  </footer>
+    <div>
+    <p class="footer">Copyright © 2023 Dutch Digital Agencies</p>
+  </div>
+  </section>
+
 </body>
 
 </html>
