flexbox toegevoegd aan 'plaatsgevonden events'

--- a/index.html
+++ b/index.html
@@ -212,32 +212,52 @@
           <p class="label">UX</p>
           <h4>Adviseer de overheid bij een pandemie</h4>
           <div class="flex-container">
-            <p class="data">03 dec / Utrecht</p>
-            <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-            <a class="blauwe-link" href="">BUTTON
-              <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
-            </a>
+            <div>
+              <p class="data">03 dec / Utrecht</p>
+            </div>
+            <div>
+              <p class="verleden">HEEFT PLAATSGEVONDEN</p>
+            </div>
+            <div class="right">
+              <a class="blauwe-link" href="">BUTTON
+                <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
+              </a>
+            </div>
           </div>
         </li>
         <li>
           <p class="label">HR</p>
           <h4>Creative Jam Dutch Design Week</h4>
           <div class="flex-container">
-            <p class="data">01 nov / Amsterdam</p>
-            <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-            <a class="blauwe-link" href="">BUTTON
-              <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
-            </a>
+            <div>
+              <p class="data">01 nov / Amsterdam</p>
+            </div>
+            <div>
+              <p class="verleden">HEEFT PLAATSGEVONDEN</p>
+            </div>
+            <div class="right">
+              <a class="blauwe-link" href="">BUTTON
+                <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
+              </a>
+            </div>
           </div>
         </li>
         <li>
           <p class="label">UX</p>
           <h4>Adviseer de overheid bij een pandemie</h4>
-          <p class="data">03 dec / Utrecht</p>
-          <p class="verleden">HEEFT PLAATSGEVONDEN</p>
-          <a class="blauwe-link" href="">BUTTON
-            <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
-          </a>
+          <div class="flex-container">
+            <div>
+              <p class="data">03 dec / Utrecht</p>
+            </div>
+            <div>
+              <p class="verleden">HEEFT PLAATSGEVONDEN</p>
+            </div>
+            <div class="right">
+              <a class="blauwe-link" href="">BUTTON
+                <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
+              </a>
+            </div>
+          </div>
         </li>
       </ul>
     </section>
@@ -311,14 +331,14 @@
   <section class="bottom">
     <!-- deel 5 bodem footer -->
     <div class="socials">
-    <a href="https://www.instagram.com/dutchdigitalagencies/">Instagram</a>
-    <a href="https://www.facebook.com/DutchDigitalAgencies/">Facebook</a>
-    <a href="https://nl.linkedin.com/company/dutch-digital-agencies">LinkedIn</a>
-  </div>
+      <a href="https://www.instagram.com/dutchdigitalagencies/">Instagram</a>
+      <a href="https://www.facebook.com/DutchDigitalAgencies/">Facebook</a>
+      <a href="https://nl.linkedin.com/company/dutch-digital-agencies">LinkedIn</a>
+    </div>
 
     <div>
-    <p class="footer">Copyright © 2023 Dutch Digital Agencies</p>
-  </div>
+      <p class="footer">Copyright © 2023 Dutch Digital Agencies</p>
+    </div>
   </section>
 
 </body>
