--- a/index.html
+++ b/index.html
@@ -263,35 +263,39 @@
     </section>
 
     <!-- uitklappen meer events met JS -->
-    <section class="extra">
+    <div class="extra">
       <p>meer events aan het laden...</p>
-    </section>
+    </div>
 
-    <section>
-      <!-- deel 1 footer -->
-      <h3 id="footer">Blijf op de hoogte van onze events</h3>
-
+    <!-- deel 1 footer -->
+    <section class="up2date">
+      <h3 class="footer">Blijf op de hoogte van onze events</h3>
       <!-- email-adres balk? -->
-
       <a class="header" href="">AANMELDEN <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
+    </section>
 
       <!-- deel 2 footer -->
-      <h3 id="footer">Wij bedanken onze trouwe partners</h3>
+    <section class="dank">  
+      <h3 class="footer">Wij bedanken onze trouwe partners</h3>
       <a class="header" href="">WORD PARTNER <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
+    </section>
 
       <!-- reclame foto's -->
-      <div>
-        <img src="../the-client-website/assets/rootnet logo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrecht logo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amac logo.png" alt="logo Amac">
-        <img src="../the-client-website/assets/rootnet logo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrecht logo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amac logo.png" alt="logo Amac">
-        <img src="../the-client-website/assets/rootnet logo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrecht logo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amac logo.png" alt="logo Amac">
+      <div class="logos">
+        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
       </div>
-    </section>
+    
   </main>
 
   <footer>
@@ -322,7 +326,7 @@
         <br>1018 XA Amsterdam
       </p>
       <div class="contact">
-        <br><a href="tel:(0)85 4010391">(0)85 4010391</a>
+        <br><a href="tel:(0)854010391">(0)85 4010391</a>
         <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
       </div>
     </div>
