nav hidden als mobile (voor nu)

--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
         </a>
 
         <!-- navigatie links -->
-        <ul class="nav">
-          <li><a class="header" href="">over ons</a></li>
-          <li><a class="header" href="">events</a></li>
-          <li><a class="header" href="">publicaties</a></li>
-          <li><a class="header" href="">leden</a></li>
-          <li><a class="header" href="">vacatures</a></li>
-        </ul>
-      </div>
-      <!-- navigatie rechts -->
-      <div class="right-container">
-        <a class="blauwe-link" href="">inloggen
-          <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
-        </a>
-        <a class="header" href="">word lid
-          <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
-        </a>
-      </div>
+        <div class="nav">
+          <ul class="nav">
+            <li><a class="header" href="">over ons</a></li>
+            <li><a class="header" href="">events</a></li>
+            <li><a class="header" href="">publicaties</a></li>
+            <li><a class="header" href="">leden</a></li>
+            <li><a class="header" href="">vacatures</a></li>
+          </ul>
+
+          <!-- navigatie rechts -->
+          <div class="right-container">
+            <a class="blauwe-link" href="">inloggen
+              <img src="../the-client-website/assets/right-blauw.svg" alt="pijltje naar rechts">
+            </a>
+            <a class="header" href="">word lid
+              <img src="assets/arrow-right.svg" alt="pijltje naar rechts">
+            </a>
+          </div>
+        </div>
     </nav>
   </header>
 
@@ -274,28 +276,28 @@
       <a class="header" href="">AANMELDEN <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
     </section>
 
-      <!-- deel 2 footer -->
-    <section class="dank">  
+    <!-- deel 2 footer -->
+    <section class="dank">
       <h3 class="footer">Wij bedanken onze trouwe partners</h3>
       <a class="header" href="">WORD PARTNER <img src="assets/arrow-right.svg" alt="pijltje naar rechts"></a>
     </section>
 
-      <!-- reclame foto's -->
-      <div class="logos">
-        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
-        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
-        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
-        <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
-        <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
-        <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
-      </div>
-    
+    <!-- reclame foto's -->
+    <div class="logos">
+      <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+      <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+      <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+      <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+      <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+      <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+      <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+      <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+      <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+      <img src="../the-client-website/assets/rootnetlogo.png" alt="logo rootnet">
+      <img src="../the-client-website/assets/ictrechtlogo.png" alt="logo ictrecht">
+      <img src="../the-client-website/assets/amaclogo.png" alt="logo Amac">
+    </div>
+
   </main>
 
   <footer>
